src/render/snapshots/webgit__render__log__tests__log_html_showmsg.snap
---
source: src/render/log.rs
expression: "render(LogProps\n{\n    commits:\n    vec![fixtures::commit_row_with_body(\"0123abcd\", \"Fix non-annotated tags\",\n    \"A tag object points at the commit; a plain ref names it\\ndirectly. Peel only the former.\",\n    \"Kunal Mehta\", fixtures::relative_age(3600),),\n    fixtures::commit_row(\"89abcdef\", \"Add README\", \"Kunal Mehta\",\n    fixtures::relative_age(86400 * 3),),], prev_url: None, next_url:\n    Some(log_url(\"\", 50, None, true)), expand:\n    ExpandMsg::new(true, log_url(\"\", 0, None, false)),\n})"
---
<table class="summary-table log-expanded">
<thead>
<tr>
<th>Age</th>
<th>Commit</th>
<th>Message (<a href="#!/log">Collapse</a>)</th>
<th>Author</th>
</tr>
</thead>
<tbody>
<tr class="logheader">
<td class="age">60 minutes</td>
<td class="name">
<a href="#!/commit/0123abcd00000000000000000000000000000000">0123abcd</a>
</td>
<td class="msg">Fix non-annotated tags</td>
<td class="author">Kunal Mehta</td>
</tr>
<tr>
<td>
</td>
<td colspan="3" class="logmsg">A tag object points at the commit; a plain ref names it
directly. Peel only the former.</td>
</tr>
<tr class="logheader">
<td class="age">3 days</td>
<td class="name">
<a href="#!/commit/89abcdef00000000000000000000000000000000">89abcdef</a>
</td>
<td class="msg">Add README</td>
<td class="author">Kunal Mehta</td>
</tr>
</tbody>
</table>
<div class="log-nav">
<a href="#!/log?offset=50&amp;showmsg=1">older →</a>
</div>
