src/render/snapshots/webgit__render__log__tests__log_html_with_pagination.snap
---
source: src/render/log.rs
expression: "render(LogProps\n{\n    commits:\n    vec![fixtures::decorated_commit_row(\"0123abcd\", \"Fix non-annotated tags\",\n    \"Kunal Mehta\", fixtures::relative_age(3600), &[\"main\"], &[\"v1.0.0\"],),\n    fixtures::commit_row(\"89abcdef\", \"Add README\", \"Kunal Mehta\",\n    fixtures::relative_age(86400 * 3),),], prev_url:\n    Some(log_url(\"\", 0, Some(\"main\"))), next_url:\n    Some(log_url(\"\", 100, Some(\"main\"))),\n})"
---
<table class="summary-table">
<thead>
<tr>
<th>Age</th>
<th>Commit</th>
<th>Message</th>
<th>Author</th>
</tr>
</thead>
<tbody>
<tr>
<td class="age">60 minutes</td>
<td class="name">
<a href="#!/commit/0123abcd00000000000000000000000000000000">0123abcd</a>
</td>
<td class="msg">Fix non-annotated tags <a href="#!/log?h=main" class="ref-label branch">main</a> <a href="#!/refs/tags/v1.0.0" class="ref-label tag">v1.0.0</a>
</td>
<td class="author">Kunal Mehta</td>
</tr>
<tr>
<td class="age">3 days</td>
<td class="name">
<a href="#!/commit/89abcdef00000000000000000000000000000000">89abcdef</a>
</td>
<td class="msg">Add README</td>
<td class="author">Kunal Mehta</td>
</tr>
</tbody>
</table>
<div class="log-nav">
<a href="#!/log?h=main">← newer</a>
<a href="#!/log?h=main&amp;offset=100">older →</a>
</div>
